bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description

  Press enter to select reasoning effort, or esc to dismiss.
