bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__multi_agent_enable_prompt.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: popup
---
  Enable subagents?
  Subagents are currently disabled in your config.

› 1. Yes, enable  Save the setting now. You will need a new session to use it.
  2. Not now      Keep subagents disabled.

  Press enter to confirm or esc to go back
