bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__permissions_selection_history_after_mode_switch.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: "lines_to_single_string(&cells[0])"
---
• Permissions updated to Full Access
