bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__plan_implementation_popup_no_selected.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

  1. Yes, implement this plan  Switch to Default and start coding.
› 2. No, stay in Plan mode     Continue planning with the model.

  Press enter to confirm or esc to go back
