bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__preamble_keeps_working_status.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Chaos to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
