bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: header
---
› Ask Chaos to do anything
