bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

